--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,13 @@
             android:textAllCaps="false"
             android:text="SetAidlInt"/>
 
+        <Button
+            android:id="@+id/set_aidl_byte"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="SetAidlByte"/>
+
     </GridLayout>
 
     <TextView
