--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,13 @@
             android:textAllCaps="false"
             android:text="SetAidlByte"/>
 
+        <Button
+            android:id="@+id/set_aidl_string"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="SetAidlString"/>
+
     </GridLayout>
 
     <TextView
