--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,13 @@
             android:textAllCaps="false"
             android:text="SetAidlString"/>
 
+        <Button
+            android:id="@+id/set_aidl_bytes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="SetAidlBytes"/>
+
     </GridLayout>
 
     <TextView
