添加Parcel传输的aidl的接口。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,13 @@
             android:textAllCaps="false"
             android:text="SetAidlBytes"/>
 
+        <Button
+            android:id="@+id/set_aidl_base_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="SetAidlBaseItem"/>
+
     </GridLayout>
 
     <TextView
